# market-intelligence-os

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  MAINTAINERS.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  setup.cfg
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  source_submission.yml
.github/workflows/: ci.yml
catalog/: community_reviewed_sources.csv  community_submission_template.csv  global_public_sources.csv  market_intelligence_sources.csv  public_primary_sources.csv
config/: decision_types.json  geographies.json  geography_regions.json  place_geographies.json  seed_catalog_hashes.json  taxonomy.json
data/: sources.json  sources.jsonl
docs/: api.md  architecture.md  data-model.md  github-setup.md  mcp.md  release-checklist.md  source-coverage.md  threat-model.md
docs/plans/: 2026-07-20-community-source-coverage.md  2026-07-20-complete-research-platform.md  2026-07-20-market-intelligence-os.md  2026-07-20-public-github-repository.md
eval/: routing_queries.json
examples/: search_sources.py
schemas/: coverage.schema.json  intent-list.schema.json  search-response.schema.json  source-lookup.schema.json  source.schema.json
scripts/: build_kb.py  check_repository.py  coverage_report.py  evaluate_router.py  validate_submission.py
src/market_intel/: __init__.py  catalog.py  cli.py  ingest.py  mcp_server.py  router.py  schema.py  schema_contract.py  service.py  submission.py
tests/: mcp_protocol_smoke.py  test_catalog.py  test_cli.py  test_ingest.py  test_mcp_server.py  test_public_api.py  test_router.py  test_schema.py  test_schema_contract.py  test_submission.py
