[metadata]
name = market-intelligence-os
version = 0.1.0
description = Explainable routing from business research questions to trusted public sources
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0

[options]
python_requires = >=3.9
package_dir =
    = src
packages = find:
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    market-intel = market_intel.cli:main

[options.data_files]
share/market-intelligence-os/data =
    data/sources.json
    data/sources.jsonl
share/market-intelligence-os/config =
    config/decision_types.json
    config/geographies.json
    config/geography_regions.json
    config/place_geographies.json
    config/taxonomy.json
